--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-email/components": "^0.1.1",
     "@react-email/render": "^1.1.3",
+    "@supabase/supabase-js": "^2.50.3",
     "clsx": "^2.1.1",
     "next": "^14.2.0",
     "react": "^18.2.0",
