--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,28 @@
+# Dependencies
 node_modules
+
+# Environment variables
+.env
+.env.local
+.env.production
+.env*.local
+
+# Next.js
+.next/
+out/
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS files
+.DS_Store
+*.pem
+
+# Vercel
+.vercel
+
+# TypeScript
+*.tsbuildinfo
+next-env.d.ts
