--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.844.0",
     "@react-email/components": "^0.1.1",
     "@react-email/render": "^1.1.3",
     "@supabase/supabase-js": "^2.50.3",
