--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@aws-sdk/client-ses": "^3.844.0",
     "@react-email/components": "^0.1.1",
     "@react-email/render": "^1.1.3",
+    "@sendgrid/mail": "^8.1.5",
     "@supabase/supabase-js": "^2.50.3",
     "clsx": "^2.1.1",
     "next": "^14.2.0",
