--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@sendgrid/mail": "^8.1.5",
     "@supabase/supabase-js": "^2.50.3",
     "clsx": "^2.1.1",
+    "compromise": "^14.14.4",
+    "ml-matrix": "^6.12.1",
     "next": "^14.2.0",
+    "openai": "^5.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-email": "^4.0.17",
