feat: Complete mobile UI fixes for Clusters app
- Fix responsive sidebar toggle with proper mobile/desktop behavior
- Add Lucide React icons for professional UI elements
- Implement isolated app layout preventing parent site interference
- Improve placeholder content visibility and contrast
- Update tab labels from 'Your Clusters' to 'My Clusters'
- Remove popup notifications during sample data loading
- Add home navigation button linking to manaboodle.com
- Resolve hydration errors with proper Next.js layout structure
- Ensure standalone app experience with complete visual isolation

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@supabase/supabase-js": "^2.50.3",
     "clsx": "^2.1.1",
     "compromise": "^14.14.4",
+    "lucide-react": "^0.539.0",
     "ml-matrix": "^6.12.1",
     "next": "^14.2.0",
     "openai": "^5.11.0",
