Enhance chatbot with OpenAI integration and improved UX
- Add OpenAI API integration for natural language responses
- Implement smart query detection (specific costs vs general questions)
- Add location-aware context to OpenAI prompts
- Replace input with expandable textarea for long messages
- Add auto-scroll to show latest messages in chat
- Speed up typewriter animation (30ms -> 10ms)
- Add refresh button to reset chat conversation
- Install required dependencies (openai, lucide-react)
- Improve error handling and logging for better debugging

Fixes issue where chatbot gave same responses regardless of location context.
Now provides intelligent answers for CEO salaries, business advice, etc.

--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "@supabase/supabase-js": "^2.50.3",
     "clsx": "^2.1.1",
     "compromise": "^14.14.4",
+    "lucide-react": "^0.544.0",
     "ml-matrix": "^6.12.1",
     "next": "^14.2.0",
-    "openai": "^5.11.0",
+    "openai": "^5.22.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-email": "^4.0.17",
