--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
   },
   "dependencies": {
     "@aws-sdk/client-ses": "^3.844.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^6.16.3",
     "@react-email/components": "^0.1.1",
     "@react-email/render": "^1.1.3",
     "@sendgrid/mail": "^8.1.5",
     "@supabase/supabase-js": "^2.50.3",
+    "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "compromise": "^14.14.4",
     "lucide-react": "^0.544.0",
     "ml-matrix": "^6.12.1",
     "next": "^14.2.0",
+    "next-auth": "^4.24.11",
     "openai": "^5.22.0",
+    "prisma": "^6.16.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-email": "^4.0.17",
@@ -27,6 +32,7 @@
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
