--- a/.env
+++ b/.env
@@ -5,4 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 # Harvard Portal Authentication Database (SQLite for development)
-DATABASE_URL="file:./dev.db"
+DATABASE_URL="postgresql://postgres.otxidzozhdnszvqbgzne:9I1aLwKJiJYbMOLa@aws-0-us-east-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
+DIRECT_URL="postgresql://postgres:9I1aLwKJiJYbMOLa@db.otxidzozhdnszvqbgzne.supabase.co:5432/postgres"
