--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,3 @@
 {
-  "buildCommand": "prisma generate && prisma db push --accept-data-loss && npm run build"
+  "buildCommand": "prisma generate && npm run build"
 }
