--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@react-email/components": "^0.1.1",
     "@react-email/render": "^1.1.3",
     "@sendgrid/mail": "^8.1.5",
-    "@supabase/supabase-js": "^2.50.3",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.74.0",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "compromise": "^14.14.4",
